K8s/1.5/my-mtool-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-mtool-svc
  namespace: lesson5
spec:
  ports:
    - name: port-multitool
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: my-backend
