K8s/1.5/my-nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-svc
  namespace: lesson5
spec:
  ports:
    - name: port-nginx
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: my-frontend
