K8s/1.5/my-test5-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: lesson5
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "nginx"
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-nginx-svc
            port:
              name: port-nginx
      - path: /api
        pathType: Exact
        backend:
          service:
            name: my-mtool-svc
            port:
              name: port-multitool
